--- a/style.css
+++ b/style.css
@@ -136,10 +136,7 @@ main .readmore {
   margin-top: 2rem;
   margin-bottom: 0.5rem;
 }
-#burger,
-#close {
-  display: none;
-}
+
 .first p,
 .second p,
 .third p {
@@ -186,7 +183,7 @@ section .content-01,
   color: var(--Dark-grayish-blue);
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 767px) {
   * {
     margin: 0;
   }
@@ -201,7 +198,8 @@ section .content-01,
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto auto;
-    margin-inline: 1.5rem;
+
+    margin-inline: clamp(0.5rem, 5rem, 10rem);
     grid-template-areas: "image" "bright" "readmore" "article";
     height: 100%;
   }
@@ -252,18 +250,26 @@ section .content-01,
     grid-area: readmore;
   }
   .desktop-image img {
-    width: 330px;
+    width: max(100%, 330px);
+
     height: 250px;
   }
+
   .bottom-content {
     grid-template-columns: 1fr;
-    margin-left: 2rem;
-    margin-right: 0;
+    margin-left: 5rem;
   }
   .bottom-content h2 {
     margin-block: 1rem;
   }
   .sidebar h1 {
     margin-block: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #burger,
+  #close {
+    display: none;
   }
 }
