--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ section .content-01,
     top: 0;
     height: 100%;
     width: 250px;
-    background: pink;
+    background: white;
     transition: right 1s ease;
   }
   #bg {
